User info is now read from JWT
