# FlightBookingApp/Backend/src/docs/swagger.json
@@ -610,6 +610,11 @@
         },
         "/ticket": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -670,6 +675,11 @@
         },
         "/ticket/buy": {
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1026,15 +1036,16 @@
         "dto.BuyTicketDto": {
             "type": "object",
             "required": [
-                "numberOfTickets",
-                "ticket"
+                "flightId",
+                "numberOfTickets"
             ],
             "properties": {
-                "numberOfTickets": {
-                    "type": "integer"
+                "flightId": {
+                    "type": "string"
                 },
-                "ticket": {
-                    "$ref": "#/definitions/model.Ticket"
+                "numberOfTickets": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -1241,7 +1252,7 @@
             ],
             "properties": {
                 "buyer": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.User"
                 },
                 "flightId": {
                     "type": "string"
@@ -1250,7 +1261,7 @@
                     "type": "string"
                 },
                 "owner": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
